# JOB_SCRAPER

./: .cursorrules  .gitattributes  .gitignore  ImageClassification.html  ImageClassification.md  README.md  Updated_VM_API_Spec_v1.2.xlsx  db_schema.docx  docker-compose.yml  package-lock.json  package.json
.cursor/diary/: 20250402.md  20250404.md
.cursor/rules/: coding_instruction.mdc
.github/: copilot-instructions.md  progress-instruction.md  progress-instructions.md  project-instruction.md  stage-1.md
.github/diary/: 20250304.md  20250305.md  chat_history.md
.github/project_instruction/: phase_01_instruction.md  phase_02_instruction.md  phase_03_instruction.md  phase_04_instruction.md  phase_05_instruction.md  phase_06_instruction.md  phase_07_instruction.md  phase_08_instruction.md  phase_09_instruction.md  project-instruction.md
apps/backend/: dockerfile  package-lock.json  package.json
apps/frontend/: README.md  dockerfile  package-lock.json  package.json
apps/python/: jobsdb_soup.html  pyproject.toml
apps/python/job_scraper/: __init__.py
apps/python/job_scraper/base/: scraper.py
apps/python/job_scraper/db/: connector.py
apps/python/job_scraper/models/: job.py
apps/python/job_scraper/scrapers/: indeed.py  jobsdb.py  jobsdb_spider.py
apps/python/tests/: __init__.py
client-frontend/: next.config.js  package-lock.json  package.json
client-frontend/app/: globals.css  layout.js  page.js  providers.js
code/: dataset.py  fashion_mnist.py  model.py  train.py
frontend/: package-lock.json  package.json
job_scraper/: __init__.py  test.py
(+399 files in other folders)
